# focusguard

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  README.md  avatar.html  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
src/assets/icons/: SidebarSVG.tsx
src/avatar/desktop-avatar/: default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot  run_test.gd  run_test.gd.uid
src/avatar/desktop-avatar/scenes/: main_dude.tscn  main_owlet.tscn  main_pink.tscn
src/avatar/desktop-avatar/scripts/: avatar.gd  avatar.gd.uid  main_dude.gd  (+6 more)
src/backend/: .env  Cargo.toml  build.rs  tauri.conf.json
src/backend/auth/: main.py
src/backend/capabilities/: default.json
src/backend/macos/activity_track/: fetch_from_browser.rs  pc_background_activity.rs
src/backend/src/: auth.rs  db.rs  lib.rs  main.rs  summary.rs
src/backend/src/activity_track/: fetch_from_browser.rs  mod.rs  pc_background_activity.rs
src/backend/src/avatar/: ai_pipeline.rs  microphone.rs  mod.rs
src/backend/windows/activity_track/: fetch_from_browser.rs
src/extension/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
src/extension/public/: manifest.json
src/extension/src/: App.tsx  main.tsx
src/features/Focus/: Focus.css  Focus.tsx
src/features/Login/: Login.css  Login.tsx  SignUp.tsx
src/features/components/: Sidebar.tsx  Timer.tsx
src/pages/: index.tsx
src/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
src/web/avatar/: AvatarApp.tsx  main.tsx
src/web/src/: App.tsx  index.css  main.tsx
src/web/ui/: App.tsx  index.css
users-ms/: .dockerignore  Dockerfile  main.py  pyproject.toml
users-ms/app/: __init__.py  auth.py  crud.py  models.py  schemas.py  settings.py
users-ms/app/routers/: auth.py  scopes.py  users.py
users-ms/tests/: test_users_auth.py
(+59 files in other folders)
