[package]
name = "focusguard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focusguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["full"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4.44"
anyhow = "1.0.102"
tempfile = "3.26.0"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dirs = "6.0.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.2", features = ["json"] }
base64 = "0.22.1"
